2019-1/221/users/4166/executions/1766_2390.log
== SUBMITION (2019-05-30 07:32:43) 
-- CODE:
p=array(eval(input("digite o número de presença:")))
f=array(eval(input("digite o número de faltas:")))

if(max(p)==p[0]):
	print(1)
elif(max(p)==p[1]):
	print(2)
elif(max(p)==p[2]):
	print(3)
elif(max(p)==p[3]):
	print(4)
elif(max(p)==p[4]):
	print(5)
elif(max(p)==p[5]):
	print(6)
elif(max(p)==p[6]):
	print(7)
elif(max(p)==p[7]):
	print(8)
elif(max(p)==p[8]):
	print(9)
elif(max(p)==p[9]):
	print(10)
elif(max(p)==p[10]):
	print(11)
elif(max(p)==p[11]):
	print(12)
-- EXECUTION TIME:
0.154215
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1766/2390/main.py", line 1, in <module>
    p=array(eval(input()))
NameError: name 'array' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 07:33:09) 
-- CODE:
from numpy import*
p=array(eval(input("digite o número de presença:")))
f=array(eval(input("digite o número de faltas:")))

if(max(p)==p[0]):
	print(1)
elif(max(p)==p[1]):
	print(2)
elif(max(p)==p[2]):
	print(3)
elif(max(p)==p[3]):
	print(4)
elif(max(p)==p[4]):
	print(5)
elif(max(p)==p[5]):
	print(6)
elif(max(p)==p[6]):
	print(7)
elif(max(p)==p[7]):
	print(8)
elif(max(p)==p[8]):
	print(9)
elif(max(p)==p[9]):
	print(10)
elif(max(p)==p[10]):
	print(11)
elif(max(p)==p[11]):
	print(12)
-- EXECUTION TIME:
0.456079
-- TEST CASE 1:
---- input:
[10,20,30,40,50,60,70,80,90,100,110,12]
[5,6,7,8,9,10,11,12,13,1,15,12]
---- correct output:
10
---- user output:
11
-- TEST CASE 2:
---- input:
[10,20,30,40,50,60,70,80,90,100,11,12]
[5,6,7,8,9,10,11,12,3,14,11,12]
---- correct output:
9
---- user output:
10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
